fix post content image overflow

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -179,6 +179,11 @@
       border: none;
     }
   }
+  p {
+    img {
+      max-width: 100%;
+    }
+  }
 }
 
 .post-meta {
